apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/part-of: homelab-platform
