apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/part-of: homelab-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:2024.10.22-7ca5933
          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              memory: "64Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
              cpu: "256m"
