apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/part-of: homelab-platform

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: it-tools
  ports:
    - name: http
      port: 80
      targetPort: http
