apps/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/part-of: homelab-platform
spec:
  ingressClassName: traefik
  rules:
    - host: it-tools.tagawa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80

  tls:
    - hosts:
        - it-tools.tagawa.ca
